# cfunge

./: .bzrignore  .codecov.yml  .gitignore  .gitmodules  .travis.yml  BUGS  CMakeLists.txt  COPYING  CREDITS  ChangeLog  ChangeLog.md  Doxyfile  README  README.md  TODO  cfunge.kdevelop  cfunge.kdevelop.filelist  cfunge08.kdevelop  cfunge08.kdevelop.filelist  cfunge08.kdevses
.github/workflows/: ci.yml
cmake/modules/: CfungeCheckCflag.cmake  CfungeCheckFunction.cmake  CfungeCheckLibraryFunction.cmake  CfungeCheckLinkerFlag.cmake  CfungeCheckWarningFlags.cmake  CfungeRequireFunction.cmake  CfungeRequireInclude.cmake  CfungeRequireMultipleIncludes.cmake  CfungeSetBuildInfoFlags.cmake  CodeCoverage.cmake
doc/: API_CHANGES  Defines  cfunge-man-fingerprints.in  cfunge-man.in  cfunge.1  fingerprintspecformat.txt
etc/: README  _cfunge  example.gdbinit
examples/: README  count.b98  fib.bf  hello-concurrent1.b98  hello-concurrent2.b98  hello.bf  prng.b98  roman.b98  wumpus.bf
lib/fungestring/: funge_memchr.c  funge_str-two-way.h  funge_strchr.c  funge_string.h  funge_strlen.c  funge_strstr.c
lib/genx/: charProps.c  genx.c  genx.h
lib/libghthash/: README  cfunge_mempool.c  cfunge_mempool.h  cfunge_mempool_priv.h  ght_hash_table.h  ght_hash_table_priv.h  hash_functions.c  hash_functions_priv.h  hash_table.c  hash_table_priv.h
lib/libghthash_fspace/: cfunge_mempool.c  cfunge_mempool.h  ght_hash_table.h  hash_functions.c  hash_functions_priv.h  hash_table.c
lib/mempool/: cfunge_mempool.c  cfunge_mempool.h  cfunge_mempool_priv.h
lib/stringbuffer/: stringbuffer.c  stringbuffer.h
pkgs/arch/: PKGBUILD
src/: diagnostic.c  diagnostic.h  division.h  global.h  input.c  input.h  interpreter.c  interpreter.h  ip.c  ip.h  main.c  main.h  prng.c  prng.h  rect.h  settings.c  settings.h  stack.c  stack.h  support.c  support.h  vector.c  vector.h
src/fingerprints/: 3DSP.spec  BASE.spec  BOOL.spec  CPLI.spec  DATE.spec  DIRF.spec  FILE.spec  FING.spec  FIXP.spec  FPDP.spec  FPSP.spec  FRTH.spec  HRTI.spec  INDV.spec  JSTR.spec  MODU.spec  NCRS.spec  NULL.spec  ORTH.spec  PERL.spec  REFC.spec  REXP.spec  ROMA.spec  SCKE.spec  SOCK.spec  STRN.spec  SUBR.spec  TERM.spec  TIME.spec  TOYS.spec  TURT.spec  fingerprints.h  manager.c  manager.h
src/fingerprints/3DSP/: 3DSP.c  3DSP.h
src/fingerprints/BASE/: BASE.c  BASE.h
src/fingerprints/BOOL/: BOOL.c  BOOL.h
src/fingerprints/CPLI/: CPLI.c  CPLI.h
src/fingerprints/DATE/: DATE.c  DATE.h
src/fingerprints/DIRF/: DIRF.c  DIRF.h
src/fingerprints/FILE/: FILE.c  FILE.h
src/fingerprints/FING/: FING.c  FING.h
src/fingerprints/FIXP/: FIXP.c  FIXP.h
src/fingerprints/FPDP/: FPDP.c  FPDP.h
src/fingerprints/FPSP/: FPSP.c  FPSP.h
src/fingerprints/FRTH/: FRTH.c  FRTH.h
src/fingerprints/HRTI/: HRTI.c  HRTI.h
src/fingerprints/INDV/: INDV.c  INDV.h
src/fingerprints/JSTR/: JSTR.c  JSTR.h
src/fingerprints/MODU/: MODU.c  MODU.h
src/fingerprints/NCRS/: NCRS.c  NCRS.h
src/fingerprints/NULL/: NULL.c  NULL.h
src/fingerprints/ORTH/: ORTH.c  ORTH.h
src/fingerprints/PERL/: PERL.c  PERL.h
src/fingerprints/REFC/: REFC.c  REFC.h
src/fingerprints/REXP/: REXP.c  REXP.h
src/fingerprints/ROMA/: ROMA.c  ROMA.h
src/fingerprints/SCKE/: SCKE.c  SCKE.h
src/fingerprints/SOCK/: SOCK.c  SOCK.h
src/fingerprints/STRN/: STRN.c  STRN.h
src/fingerprints/SUBR/: SUBR.c  SUBR.h
src/fingerprints/TERM/: TERM.c  TERM.h
src/fingerprints/TIME/: TIME.c  TIME.h
src/fingerprints/TOYS/: TOYS.c  TOYS.h
src/fingerprints/TURT/: TURT.c  TURT.h
src/funge-space/: funge-space.c  funge-space.h
src/funge-space/b93/: funge-space.c  funge-space.h
src/funge-space/b98/: funge-space.c
src/instructions/: README  execute.c  execute.h  io.c  io.h  iterate.c  iterate.h  safe_env.c  safe_env.h  sysinfo.c  sysinfo.h
src/instructions/sysinfo-misc/: gen_safeenv_hash.sh  safe_env.gperf
tests/: CMakeLists.txt  frth-test.b98  io-errors.b98  iterate-fetchchar.b98  iterate-iterate.b108  iterate-iterate2.b108  iterate-iterate2.b109  iterate-jump.b108  iterate-space.b109  iterate-space.b98  iterate-zero.b98  jumpwrap.b98  perl.b98  refc-invalid-deref.b98  s-nowrap.b98  sigfpe.b98  split-in-iterate.b98  strn-F.b98  strn-G.b98  sysexec.b98  test_runner.py  text-output.b98  turt.b98  wrap.b98
tests/automated/: CMakeLists.txt  bool-test.b98  bool-test.expected  bounds.b98  bounds.expected  concurrent-issues.b98  concurrent-issues.expected  dirf-errors.b98  dirf-errors.expected  file-errors.b98  file-errors.expected  frth-test.expected  io-errors.expected  iterate-exit.b98  iterate-fetchchar.b98  iterate-fetchchar.expected  iterate-iterate.expected  iterate-zero.expected  multi-file.b98  perl.b98  perl.expected  refc-force-resize.b98  refc-invalid-deref.expected  sigfpe.b98  strn-A.b98  strn-A.expected  strn-F.expected  strn-G.expected  subr-test.b98  subr-test.expected  sysexec.b98  sysexec.expected  sysinfo-pick.b98  test-formfeed.b98  test-formfeed.expected  test_runner.py  toys-errors.b98  toys-errors.expected  turt.TURT.expected  turt.b98  (+4 more)
tests/manual/: fixp-nan.b98  iterate-iterate.exepected  sysinfo-multi-stack-sizes.b98  text-output.b98
tests/mycology/: CMakeLists.txt  mycology.TURT.expected  mycology.expected  mycology_output_filter.sh  mycology_runner.sh  mycouser.expected  output
tools/: astyle.sh  fprint_funcs.sh  fuzz-test.sh  gen_fingerprint.sh  gen_fprint_list.sh
